--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       <input type="text" name="message" value="" placeholder="Message"/>
       <button>Send</button>
     </form>
+    <button id="send-location">Send Location</button>
 
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
     <script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
