--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css">
     <title></title>
   </head>
-  <body>
-    <p>Welcome to the chat app</p>
-    <ol id="messages">
+  <body class="chat">
 
-    </ol>
-    <form id="message-form">
-      <input type="text" name="message" value="" placeholder="Message"/>
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users">
+      </div>
+    </div>
+
+    <div class="chat__main">
+      <ol id="messages" class="chat__messages">
+      </ol>
+      <div class="chat__footer">
+        <form id="message-form">
+          <input type="text" name="message" value="" autofocus autocomplete="off" placeholder="Message"/>
+          <button>Send</button>
+        </form>
+        <button id="send-location">Send Location</button>
+      </div>
+    </div>
 
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
     <script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
