--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,9 @@
       </div>
     </div>
 
-    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/js/libs/jquery-3.3.1.min.js"></script>
-    <script src="/js/index.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/js/libs/moment.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>
   </body>
 </html>
